fixed another visibility error

--- a/public/join/style.less
+++ b/public/join/style.less
@@ -20,8 +20,8 @@ body {
 }
 
 /* Hide the password field if no password is needed */
-#room-password:placeholder-shown:not(.required),
-label[for="room-password"]:has(+ #room-password:placeholder-shown:not(.required)) {
+#room-password:placeholder-shown[required],
+label[for="room-password"]:has(+ #room-password:placeholder-shown[required]) {
 	display: none;
 }
 
